test-suite/output/ErrorLocation_ltac_3.out
File "./output/ErrorLocation_ltac_3.v", line 3, characters 7-10:
Error: Not a negated primitive equality.

