test-suite/output/ErrorLocation_ltac_3.v
Ltac inj := injection.
Goal False.
idtac; inj.
Abort.
